syntax = "proto3";
option go_package = "msgProto/CommonMessage";
package Define;

enum ERouteId
{
    ER_Invalid = 0;
    ER_ESG = 1;   // 外网关（client <-> server 客户端与服务器直接门户，建议会话，将客户端消息转发到内外服务器）
    ER_ISG = 2;   // 内网关（暂时由world负责，不用）
    ER_DB = 3;    // db服 (负责数据库增删查改)
    ER_BigWorld = 4; // 世界服 (中转各服务器消息)
    ER_Login = 5; // 登录服 (负责玩家账号、第三方登陆[微信、公众号、QQ等]...)
    ER_SmallWorld = 6; // 小世界服 (第三方小程序、H5转发、系统救济金等游戏逻辑外职责功能)))
    ER_DBProxy = 7; // db代理服(缓存db操作，队列定时交付操作，缓解db服务器压力))
    ER_Game = 8;   //游戏服（可根据游戏设计任意扩展逻辑）
    ER_Client = 9; //客户端

    ER_Max = 10; //最大枚举
}

//可自定义游戏服中普遍使用的结构，在各协议引用...